--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
     { name = "Shunsuke KITADA", email = "shunsuke.kitada.0831@gmail.com" },
 ]
 requires-python = ">=3.10"
-dependencies = ["langchain[openai]>=0.3.0", "pillow>=12.0.0"]
+dependencies = ["langchain>=0.3.0", "pillow>=12.0.0"]
 
 [build-system]
 requires = ["uv_build>=0.9.3,<0.10.0"]
